; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-index.c_write_dictionaries.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-index.c_write_dictionaries.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i8*, i8*, i8* }

@write_pos = common dso_local global i8* null, align 8
@Header = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@WordCharDict = common dso_local global i32 0, align 4
@NotWordCharDict = common dso_local global i32 0, align 4
@WordList = common dso_local global i32 0, align 4
@word_codes_cnt = common dso_local global i32 0, align 4
@NotWordList = common dso_local global i32 0, align 4
@notword_codes_cnt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_dictionaries() #0 {
  %1 = load i8*, i8** @write_pos, align 8
  store i8* %1, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Header, i32 0, i32 4), align 8
  %2 = call i32 @write_char_dictionary(i32* @WordCharDict)
  %3 = load i8*, i8** @write_pos, align 8
  store i8* %3, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Header, i32 0, i32 3), align 8
  %4 = call i32 @write_char_dictionary(i32* @NotWordCharDict)
  %5 = load i8*, i8** @write_pos, align 8
  store i8* %5, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Header, i32 0, i32 2), align 8
  %6 = load i32, i32* @WordList, align 4
  %7 = load i32, i32* @word_codes_cnt, align 4
  %8 = call i32 @write_word_dictionary(i32 %6, i32 %7)
  %9 = load i8*, i8** @write_pos, align 8
  store i8* %9, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Header, i32 0, i32 1), align 8
  %10 = load i32, i32* @NotWordList, align 4
  %11 = load i32, i32* @notword_codes_cnt, align 4
  %12 = call i32 @write_word_dictionary(i32 %10, i32 %11)
  %13 = load i8*, i8** @write_pos, align 8
  store i8* %13, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Header, i32 0, i32 0), align 8
  ret void
}

declare dso_local i32 @write_char_dictionary(i32*) #1

declare dso_local i32 @write_word_dictionary(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
